# Diabetes-detection-using-deeplearning

./: Diabetes_detection.ipynb  Diabetes_detection_with_deep_learning.ipynb  README.md  netflix_movie_analysis.ipynb  pyproject.toml
.ipynb_checkpoints/: Diabetes_detection-checkpoint.ipynb
